# Capital-Markets-Data-Engine

./: .gitignore  Job System.txt  README.md  TheoryHypothesis Idea for a project.txt  aapl_headlines.json  csv_checker.py  fetch.py  pyproject.toml  pytest.ini  requirements.txt  workshop-values.txt
database/: db.py  dbplan.py  improvements.txt  test.py
database/core/: exchanges.py  markets.py
database/data/providers/: FMP_provider.py  IBKR_provider.py  base.py  template.txt  test.py
database/data/services/: FMP_service.py  IBKR_service.py  template.txt
database/instruments/: tickers.py
database/repositories/core/: exchange_repository.py  market_repository.py
database/repositories/fundamental_data/: statements_repository.py
database/repositories/instruments/: ticker_repository.py
database/repositories/technical_data/: price_repository.py
database/technical_data/: historical_prices.py
src/data_providers/: __init__.py  datahub.py  exceptions.py
src/database_connector/: __init__.py  db.py
src/datahub/: __init__.py  db.py
tests/: test_ibkr_pacer_grid.py
tests/database/: TODO.txt  dbtest.py
tests/database/ibkr/: script.py  (+3 more)
tests/datahub/: datahubtest.py  enriched_data_fetch.py
tests/integration/: conftest.py  test_live_database_connector.py  test_live_datahub.py
tests/test_data/: testing.sqlite  testing.sqlite-shm  testing.sqlite-wal
tests/unit/: test_database_abstraction.py  test_datahub_routing.py  test_dialect_templates.py  test_equity_caching.py  test_fmp_historical_prices.py  test_fmp_service_cache.py
unit_tests/database/: dbtest.py
(+62 files in other folders)
